package app.carport.Controllers;

import app.carport.Persistence.ConnectionPool;
import io.javalin.Javalin;

public class LoginController {
    public static void addRoutes(Javalin app, ConnectionPool connectionPool) {
    }

    public static void registerUser(ConnectionPool connectionPool) {
    }

    public static void login(ConnectionPool connectionPool) {
    }

    public static void logout(ConnectionPool connectionPool) {
    }

    public static void userStatus(ConnectionPool connectionPool) {
    }
}
