package app.carport.Controllers;

import app.carport.Persistence.ConnectionPool;
import io.javalin.Javalin;

public class ShopController {
    public static void addRoutes(Javalin app, ConnectionPool connectionPool) {
    }

    public static void orderButtonOne(ConnectionPool connectionPool) {

    }

    public static void orderButtonTwo(ConnectionPool connectionPool) {

    }

    public static void orderButtonThree(ConnectionPool connectionPool) {

    }

    public static void orderCarport(ConnectionPool connectionPool) {

    }
}
