package app.carport.Persistence;

public class AdminMapper {
    public boolean editMaterials(Object... editMaterials) {
        if (editMaterials.length == 1) {
            // do something with single element
            return false;
        }
        return false;
    }

    public boolean addMaterials(String material) {
        return false;
    }
}
