package app.carport.Persistence;

import app.carport.Entities.Carport;
import app.carport.Entities.Order;
import app.carport.Entities.User;

public class CarportMapper {
    public Carport getCarportByOrder(Order order, ConnectionPool connectionPool) {
        return null;
    }

    public Carport getCarportById(int id, ConnectionPool connectionPool) {
        return null;
    }

    public boolean inserCarport(Carport carport, ConnectionPool connectionPool) {
        return false;
    }

    public Carport getCarportByUser(User user, ConnectionPool connectionPool) {
        int carportID = user.getOrder().getOrderID();

        return null;
    }
}
