@startuml
'https://plantuml.com/class-diagram

'entities
Entities.User *-- Entities.Address
Entities.Order *-- Entities.Carport
Entities.User o--o Entities.Order


'persistence
Persistence.UserMapper *-- Persistence.ConnectionPool
Persistence.CarportMapper *-- Persistence.ConnectionPool
Persistence.OrderMapper *-- Persistence.ConnectionPool
Persistence.AdminMapper *-- Persistence.ConnectionPool
Controllers *-- Persistence.ConnectionPool
Entities o--o Controllers
Persistence o--o Entities

'Main connections
Main <-- Controllers.LoginController
Main <-- Controllers.HeaderController
Main <-- Controllers.ShopController
Main <-- Controllers.AdminPanelController

class Main {
+main(String args[]): void
}

package Entities {
class Carport {
-int carportId
-String material
-int width
-int length
-int price
}

class User {
-int userId
-String email
-String password
-boolean role
-Address address
-Order order
}

class Address {
-int addressId
-int postalCode
-String cityName
-String streetName
}

class Order {
-int orderId
-String status
-int userId
-int carportId
}
}

package Persistence {
class ConnectionPool {
+getInstance() : ConnectionPool
+getConnection() : Connection
+close() : void
-createHikariConnectionPool() : getHikariConnection
}

class CarportMapper {
+getCarportByOrder() : Carport
+getCarportByUser() : Carport
+insertCarport() : void
}

class UserMapper {
+login( String email, String password ) : User
+registerUser( String name, String password, String role ) : boolean
+doesUserExist( String email ) : boolean
+orderCarport( User user, Carport carport ) : boolean
}

class OrderMapper {
+getAllOrders() : List<Order>
+getOrderByUser() : Order
}

class AdminMapper {
+editMaterials( Object... changedMaterials) : boolean
+addMaterial( Material material ) : boolean
}
}

package Controllers {
class LoginController {
+createUser() : void
+loginUser() : void
+userStatus() : void
}

class ShopController {
+orderButtonOne() : void
+orderButtonTwo() : void
+orderButtonThree() : void
+orderCarport() : void
}

class HeaderController {
+gotoShop() : void
+gotoCreateUser() : void
+gotoOrder() : void
}

class AdminPanelController {
+editMaterials() : void
+addMaterial() : void

}
}


@enduml